# quickemu_dynamic_caching

./: Cargo.toml
.github/workflows/: cache.yml  windows-urls.yml
create_windows_matrix/: Cargo.toml
create_windows_matrix/src/: main.rs
windows/create_matrix/: Cargo.toml
windows/create_matrix/src/: main.rs
windows/get_urls/: Cargo.toml
windows/get_urls/src/: main.rs
