[package]
name = "create_windows_matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4"] }
