[package]
name = "get_windows_urls"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4"] }
